HIVE-01:: Fixing some spacings

--- a/public/themes/default/css/_style.css
+++ b/public/themes/default/css/_style.css
@@ -270,7 +270,7 @@ img {
 .main-navigation__item {
   float: left;
   position: relative;
-  padding: 0 20px;
+  padding: 0 21px 0 20px;
 }
 .main-navigation__item:after {
   height: 14px;
@@ -296,7 +296,7 @@ img {
 }
 .dont-miss__item {
   float: left;
-  padding: 0 11px;
+  padding: 0 12px 0 11px;
   position: relative;
 }
 .dont-miss__item:after {
