--- a/public/themes/default/css/modules/main_navigation.styl
+++ b/public/themes/default/css/modules/main_navigation.styl
@@ -19,7 +19,7 @@
 .main-navigation__item
 	float left
 	position relative
-	padding 0 20px
+	padding 0 21px 0 20px
 
 .main-navigation__item:after
 	height 14px
@@ -46,7 +46,7 @@
 	
 .dont-miss__item
 	float left
-	padding 0 11px
+	padding 0 12px 0 11px
 	position relative
 
 .dont-miss__item:after
